--- a/vagrant/ansible/master-playbook.yml
+++ b/vagrant/ansible/master-playbook.yml
@@ -7,7 +7,7 @@
     - name: Include common tasks
       include_tasks: common-tasks.yml
 
-    - name: Configure kubectl
+    - name: Init kubeadm
       command: kubeadm init --apiserver-advertise-address="{{ k8s_master_apiserver_advertise_address }}" --apiserver-cert-extra-sans="{{ k8s_master_apiserver_advertise_address }}" --node-name="{{ k8s_master_node_name }}" --pod-network-cidr="{{ k8s_master_pod_network_cidr }}"
       args:
         creates: /etc/kubernetes/manifests/kube-apiserver.yaml
